# Encrypted-Chatroom

./: README.md
proj/: .gitignore  CMakeLists.txt  README.md
proj/client/src/: client.cpp  client.hpp  main.cpp
proj/configs/: server.toml
proj/docs/: chat_hub.txt  client.txt  connection.txt  crypto_context.txt  protocol.txt  room_manager.txt  server.txt  server_config.txt
proj/include/ets/: crypto_context.cpp  crypto_context.hpp  protocol.hpp
proj/scripts/: build.sh  flamegraph.sh  load_test.sh
proj/server/include/ets_server/: chat_hub.hpp  connection.hpp  room_manager.hpp  server.hpp  server_config.hpp
proj/server/src/: chat_hub.cpp  connection.cpp  main.cpp  room_manager.cpp  server.cpp  server_config.cpp
proj/tests/: test_crypto.cpp  test_load.cpp
